force-app/main/default/objects/Instructor_Invoice_Line__c/Instructor_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Instructor Invoice Line</label>
    <nameField>
        <label>Expense Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructor Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>