force-app/main/default/objects/Instructor_Invoice_Line__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expense_Type</valueSetName>
    </valueSet>
</CustomField>