force-app/main/default/objects/Instructor_Invoice_Line__c/fields/Instructor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Invoice__c</fullName>
    <label>Instructor Invoice</label>
    <referenceTo>Instructor_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Instructor_Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>